test_scripts/semantic_errors/comparison_type_error.sp
bool result = 5 == true;
